; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/v4l2/extr_controls.c_ControlSetStr.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/v4l2/extr_controls.c_ControlSetStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.v4l2_ext_control = type { i8*, i32, i32 }
%struct.v4l2_ext_controls = type { i32, %struct.v4l2_ext_control*, i32, i32 }

@VIDIOC_S_EXT_CTRLS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @ControlSetStr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ControlSetStr(%struct.TYPE_3__* %0, i8* noalias %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_ext_control, align 8
  %7 = alloca %struct.v4l2_ext_controls, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = getelementptr inbounds %struct.v4l2_ext_control, %struct.v4l2_ext_control* %6, i32 0, i32 0
  store i8* null, i8** %8, align 8
  %9 = getelementptr inbounds %struct.v4l2_ext_control, %struct.v4l2_ext_control* %6, i32 0, i32 1
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %9, align 8
  %13 = getelementptr inbounds %struct.v4l2_ext_control, %struct.v4l2_ext_control* %6, i32 0, i32 2
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %13, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = getelementptr inbounds %struct.v4l2_ext_control, %struct.v4l2_ext_control* %6, i32 0, i32 0
  store i8* %17, i8** %18, align 8
  %19 = getelementptr inbounds %struct.v4l2_ext_controls, %struct.v4l2_ext_controls* %7, i32 0, i32 0
  store i32 1, i32* %19, align 8
  %20 = getelementptr inbounds %struct.v4l2_ext_controls, %struct.v4l2_ext_controls* %7, i32 0, i32 1
  store %struct.v4l2_ext_control* %6, %struct.v4l2_ext_control** %20, align 8
  %21 = getelementptr inbounds %struct.v4l2_ext_controls, %struct.v4l2_ext_controls* %7, i32 0, i32 2
  store i32 0, i32* %21, align 8
  %22 = getelementptr inbounds %struct.v4l2_ext_controls, %struct.v4l2_ext_controls* %7, i32 0, i32 3
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @V4L2_CTRL_ID2CLASS(i32 %25)
  store i32 %26, i32* %22, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @VIDIOC_S_EXT_CTRLS, align 4
  %31 = call i64 @v4l2_ioctl(i32 %29, i32 %30, %struct.v4l2_ext_controls* %7)
  %32 = icmp slt i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %35

34:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %33
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @V4L2_CTRL_ID2CLASS(i32) #1

declare dso_local i64 @v4l2_ioctl(i32, i32, %struct.v4l2_ext_controls*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
